--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                             <a class="nav-link" href="#work">Work</a>
                         </li>
                         
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
