updated la criolla restaurant info page

--- a/lacriolla.html
+++ b/lacriolla.html
@@ -20,24 +20,24 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid">
-                <div><a class="navbar-brand" href="index.html"><img style="width: 80px" src="images/logo-color.png" alt="logo"></a></div>
+                <div><a class="navbar-brand" href="https://leyasalazar.com/"><img style="width: 80px" src="images/logo-color.png" alt="logo"></a></div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Home<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" aria-current="page" href="https://leyasalazar.com/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#about">About</a>
+                            <a class="nav-link" href="https://leyasalazar.com/#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#work">Work</a>
+                            <a class="nav-link" href="https://leyasalazar.com/#work">Work</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="index.html#contact">Contact</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -46,15 +46,15 @@
     <div class="container-fluid px-md-5 project">
         <div class="row text-center px-sm-5 justify-content-center">
             <h1>La Criolla Website and Logo</h1>
-            <p> This project is for a fictional peruvian restaurant. The colors mainly used are red and white that represents the Peru's flag colors. This website is responsive and useful to find information about the team, the chef's vision and the wide variety of dishes served. The logo uses a bold typography to be impacftul and memorable for the customers.
+            <p> Website and branding for a peruvian restaurant. This website is responsive and useful to find information about the team, the chef's vision and the wide variety of dishes served. 
+                The colors mainly used are red and white that represents the Peru's flag colors. The logo uses a bold typography to be impacftul and memorable for the customers.
             </p>
+            <h4>Tech Stack:</h4>
+            <p>HTML, CSS, Bootstrap</p>
             <h4>Tools:</h4>
-            <p>Figma, Adobe Ilustrator, Adobe Photoshop, WebStorm, HTML AND CSS.
-                <br>
-                <br>
-                You can visit
-                <a href="la-criolla/index.html" id="link-project">La Criolla Website here.</a>
-            </p>
+            <p>Figma, Adobe Ilustrator, Adobe Photoshop</p>
+            <p>You can visit
+                <a href="la-criolla/index" id="link-project">La Criolla Website here.</a></p>
         <div class="row  pt-sm-5">
             <div class="col">
                 <img class="img-fluid pb-3" style="background-color: black" src="images/logo-criolla.svg" alt="Logo">
@@ -72,8 +72,7 @@
                 <p class="nameFooter pt-lg-4 mb-0">© Leya Salazar Romero</p>
             </div>
             <div class="col-5 text-end">
-                <a  href="https://www.instagram.com/lias.creates/" target="_blank"><img class="icon" src="images/instagram-svgrepo.svg" alt="instagram logo footer"></a>
-                <!--                    <a  href="https://www.behance.net/leyasalazar" target="_blank"><img class="icon" src="images/behance-svgrepo.svg" alt="show logo footer"></a>-->
+                <a  href="https://github.com/leyasalazar" target="_blank"><img class="icon" src="images/github-logo.svg" alt="github logo footer"></a>
                 <a href="https://www.linkedin.com/in/leyasalazar/" target="_blank"><img class="icon" src="images/linkedin-svgrepo.svg" alt="linkedin logo footer"></a>
             </div>
         </div>
