updated main page portfolio, added a project

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid">
-                <div><a class="navbar-brand" href="index.html"><img style="width: 80px" src="images/logo-color.png" alt="logo"></a></div>
+                <div><a class="navbar-brand" href="https://leyasalazar.com/"><img style="width: 80px" src="images/logo-color.png" alt="logo"></a></div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Home<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" aria-current="page" href="https://leyasalazar.com/">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#about">About</a>
@@ -63,10 +63,7 @@
                     <div class="col-lg-6 text-justify">
                         <h2>About</h2>
                         <p>
-                            I'm Leya. I am a peruvian Web designer and Front-end developer graduated with the Web Design and Front-End Development A.A.S. degree and Graphic Design Certificate from Minneapolis College. I have experience with photography, mural painting and digital art.
-                        </p>
-                            <p>
-                            I have always been very drawn to and passionate about math, problem solving, and art. Since I was a child, I have appreciated all types of art. My appreciation has gone from nature to paintings, designs, and cultural concepts. It inspired me to find this profession where I can creatively combine my favorite things. I want to create powerful and efficient designs with great attention to detail.
+                            I'm Leya. I am a dynamic full-stack software engineer with a passion for building scalable web applications. My journey began with an interest in front-end development. I also gained experience in back-end development and implementing RESTful APIs, which motivated me to understand the complete application functionality. I thrive on solving problems and leveraging technology to create innovative and impactful software solutions.
                         </p>
                         <div class="row">
                             <ul class="icons justify-content-center pt-sm-5">
@@ -83,18 +80,18 @@
             <h2>Work</h2>
             <div class="row mt-md-5">
                 <div class="card-group">
-                    <a href="lacriolla.html" class="card border-0 w-auto p-3">
-                        <img class="img-fluid" src="images/lacriolla-square.jpg" alt="LA CRIOLLA">
+                    <a href="lacriolla" class="card border-0 w-auto p-3">
+                        <img class="img-fluid" src="images/leyasalazar.com_la-criolla_index.html.png" alt="LA CRIOLLA">
                         <div class="mt-3">
-                            <h3>La Criolla Website</h3>
+                            <h3>La Criolla Restaurant</h3>
                         </div>
                     </a>
-                    <!-- <a href="craftygrow.html" class="card border-0 w-auto p-3">
-                        <img class="img-fluid" src="images/crafty1-square.jpg" alt="CRAFTYGROW">
+                    <a href="mothercircle" class="card border-0 w-auto p-3">
+                        <img class="img-fluid" src="images/mothers-circle.com_ (1).png" alt="Mothers' circle">
                         <div class="mt-3">
-                            <h3>CraftyGrow App</h3>
+                            <h3>Mothers Circle</h3>
                         </div>
-                    </a> -->
+                    </a>
                 </div>
             </div>
         </div>
